syntax = "proto3";

package cn.leancloud.play.proto;

option java_multiple_files = true;

message GenericCollectionValue {
    enum Type {
        NULL = 0;
        BYTES = 1;
        BYTE = 2;
        SHORT = 3;
        INT = 4;
        LONG = 5;
        BOOL = 6;
        FLOAT = 7;
        DOUBLE = 8;
        OBJECT = 9;
        STRING = 10;
        MAP = 11;
        ARRAY = 12;
    }

    Type type = 1;
    oneof value {
        int32 intValue = 2;
        int64 longIntValue = 3;
        bool boolValue = 4;
        string stringValue = 5;
        bytes bytesValue = 6;
        float floatValue = 7;
        double doubleValue = 8;
    }
    int32 objectTypeId = 9;
}

message GenericCollection {
    message MapEntry {
        string key = 1;
        GenericCollectionValue val = 2;
    }

    repeated GenericCollectionValue listValue = 1;
    repeated MapEntry mapEntryValue = 2;
}